issue fixed navbar name too close to links in mobile view 769px

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -7,7 +7,7 @@
   align-items: center;
   background-color: #27333f;
   border: 2px solid #b0caf063;
-  padding: 70px 20px;
+  padding: 20px 20px;
   border-radius: 8px;
   color: white;
   text-align: center;
